# emul-6502

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: bus.rs  cpu.rs  emulator.rs  lib.rs  main.rs  operations.rs  shared.rs  variants.rs
tests/: singlestep.rs
