[package]
name = "emul-6502"
version = "0.1.0"
edition = "2024"
authors = ["Akshat Sharma akshat_sharma@zohomail.in"]
license = "Apache 2.0"
description = "A cycle-accurate 6502 emulator written in Rust."
repository = "https://github.com/ksaze/emul-6502"

[[bin]]
name = "emu6502"
path = "src/main.rs"

[dependencies]
