[package]
name = "MOS65x"
version = "0.1.0"
edition = "2024"
authors = ["Akshat Sharma akshat_sharma@zohomail.in"]
license = "BSD-3-Claude License"
description = "A cycle-accurate mos65 series emulator with support multiple variants and systems"
repository = "https://github.com/ksaze/mos65x"

[[bin]]
name = "mos65x"
path = "src/main.rs"

[dependencies]
bitflags = "2.9.3"
