[package]
name = "mos65x"
version = "0.1.0"
edition = "2024"
authors = ["Akshat Sharma akshat_sharma@zohomail.in"]
license = "BSD-3-Claude License"
description = "A cycle-accurate mos65 series emulator with support multiple variants and systems"
repository = "https://github.com/ksaze/mos65x"

[lib]
name = "mos65x"
path = "src/lib.rs"

[[bin]]
name = "mos65x"
path = "src/main.rs"

[dependencies]
bitflags = "2.9.3"

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
